<resources>
    <string name="app_name">Coding Train</string>
    <string name="intro">This is a collection of coding challenges from the <![CDATA[<a href="http://www.youtube.com/user/shiffman/featured">Coding Train</a>]]> YouTube series</string>
    <string name="button1">OpenGL Basics</string>
    <string name="button2">Canvas Basics</string>
    <string name="button3">Fireworks</string>
    <string name="button4">Metaballs</string>
    <string name="button5">Smart Rockets</string>
    <string name="button6">Double Pendulum</string>
    <string name="button7">Snakes and Ladders</string>
    <string name="button8">Circle Packing</string>
    <string name="button9">Mitosis Simulation</string>
    <string name="button10">Really cool things\u2026</string>
    <string name="button11">Langton\'s Ant</string>
    <string name="button12">Phyllotaxis</string>
    <string name="button13">Perlin Noise</string>
    <string name="button14">Maze Generator</string>
    <string name="button15">Terrain Generator</string>
    <string name="button16">Fractal Trees</string>
    <string name="button17">Circle Morphing</string>
    <string name="button18">3D Text Crawl</string>
    <string name="button19">TBA</string>
    <string name="button20">More cool things\u2026</string>

    <string name="title_activity_opengl">OpenGL Testing</string>
    <string name="title_activity_canvas">Canvas Testing</string>
    <string name="title_activity_fireworks">Fireworks</string>
    <string name="title_activity_metaballs">Metaballs</string>
    <string name="title_activity_smartrockets">Smart Rockets</string>
    <string name="title_activity_pendulum">Double Pendulum</string>
    <string name="title_activity_snakes">Snakes and Ladders</string>
    <string name="title_activity_circlepack">Circle Packing</string>
    <string name="title_activity_mitosis">Mitosis Simulation</string>
    <string name="title_activity_langton">Langton\'s Ant</string>
    <string name="title_activity_phyllo">Phyllotaxis - Leaf Arrangement</string>
    <string name="title_activity_perlin">Perlin Noise - Flow Field</string>
    <string name="title_activity_mazegen">Maze Generator</string>
    <string name="title_activity_terraingen">Terrain Generator</string>
    <string name="title_activity_fractals">Fractal Trees</string>
    <string name="title_activity_circmorph">Circle Morphing</string>
    <string name="title_activity_textcrawl">3D Text Crawl - Star Wars</string>
    <string name="title_activity_tba19">TBA19</string>

    <string name="action_button_done">DONE</string>
    <string name="action_button_start">START</string>
    <string name="enter_text_button">Enter Text</string>
    <string name="image_button">Choose Image</string>
    <string name="key_info">KEY INFO</string>
    <string name="log_info">LOG INFO</string>


</resources>
